// Copyright 2021 The Kubeflow Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option go_package = "github.com/kubeflow/pipelines/api/v2alpha1/go/cachekey";
package ml_pipelines;

// import "google/protobuf/any.proto";
import "google/protobuf/struct.proto";
import "pipeline_spec.proto";

message CacheKey {
  map<string, ArtifactNameList> inputArtifactNames = 1;
  map<string, Value> inputParameters = 2;
  map<string, RuntimeArtifact> outputArtifactsSpec = 3;
  map<string, string> outputParametersSpec=4;
  ContainerSpec containerSpec=5;
  map<string, google.protobuf.Value> input_parameter_values = 6;
}

message ContainerSpec {
  string image = 1;
  repeated string cmdArgs = 2;
}

message ArtifactNameList {
  repeated string artifactNames = 1;
}
